Fix nav collapse (thanks to remind me @RaulWhite :)

--- a/src/app.scss
+++ b/src/app.scss
@@ -119,6 +119,31 @@ a:hover {
     border-color: $primary-color-normal;
     box-shadow: none;
   }
+
+  @media (max-width: 991.98px) {
+    .offcanvas-collapse {
+      display: block;
+      position: fixed;
+      top: 56px; /* Height of navbar */
+      bottom: 0;
+      left: -290px;
+      width: 100%;
+      max-width: 290px;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      overflow-y: auto;
+      visibility: hidden;
+      background-color: #343a40;
+      transition-timing-function: ease-in-out;
+      transition-duration: .3s;
+      transition-property: left, visibility;
+    }
+
+    .offcanvas-collapse.open {
+      left: 0;
+      visibility: visible;
+    }
+  }
 }
 
 /**
